<resources>
    <string name="app_name">Omega Records</string>
    <string name="view_user_label">User List</string>
    <string name="view_user_details_label">User Details</string>
    <string name="edit_profile_label">Edit Profile</string>

    <string name="preference_file_key">"com.learningandroid.omegarecords.PREFERENCE_FILE_KEY"</string>
    <string name="preference_file_bkgndmusic_key">BKGND_MUSIC_KEY</string>
    <!-- for app info -->
    <string name="app_info_description">Omega Records allows companies to manage their employee
        records effectively. It includes the following features. </string>
    <string name="feature_one">use google sign in</string>
    <string name="feature_two">view employee list</string>
    <string name="feature_three">view employee details</string>
    <string name="feature_four">edit profile</string>

    <!-- for sign in activity -->
    <string name="sign_in_status">Sign in to Continue</string>
    <string name="sign_in_app_logo">Logo Image</string>
    <string name="sign_in_view_list_button">View Users</string>
    <string name="sign_in_profile_button">Edit Profile</string>
    <string name="sign_out_button">Sign Out</string>
    <string name="disconnect_button">Disconnect</string>
    <string name="signed_in_fmt">Signed in as: %s</string>

    <!-- for view users activity -->
    <string name="view_user_fetch_users">Fetching User Data</string>
    <string name="view_user_cancel_fetching">Cancel</string>
    <string name="view_user_name">Name</string>
    <string name="view_user_email">Email</string>
    <string name="view_user_image">Photo</string>

    <!-- for view user details activity-->
    <string name="user_details_photo">User Photo</string>
    <string name="user_details_name">User Name</string>
    <string name="user_details_phone">Phone No.</string>
    <string name="user_details_email">Email</string>
    <string name="user_details_website">Website</string>

    <string name="user_details_address_photo">Address Image</string>
    <string name="user_details_address_street_and_suite">Street, Suite</string>
    <string name="user_details_address_city_and_zipcode">City, Zipcode</string>
    <string name="user_details_address_geo">Latitude, Longitude</string>

    <string name="user_details_com_photo">Company Image</string>
    <string name="user_details_com_name">Company name</string>
    <string name="user_details_com_catch_phrase">Company Catch Phrase</string>
    <string name="user_details_com_business">Company Business</string>

    <!-- for edit profile activity -->
    <string name="save_profile_button">Save Profile</string>
    <string name="profile_address_street">Street</string>
    <string name="profile_address_suite">Suite</string>
    <string name="profile_address_city">City</string>
    <string name="profile_address_zipcode">Zipcode</string>
    <string name="profile_geo_lat">Latitude</string>
    <string name="profile_geo_lng">Longitude</string>

    <!-- for header and navigation pane -->
    <string name="header_logo">Logo Image</string>
    <string name="header_name">Name</string>
    <string name="header_email">Email</string>
    <string name="log_out">Log Out</string>
    <string name="setting">Setting</string>
    <string name="app_info">Info</string>
    <string name="open">Open</string>
    <string name="close">Close</string>

    <!-- for settings -->
    <string name="setting_background_music"> Set background music</string>
    <string name="setting_background_music_switch">switch</string>
    <string name="setting_apply">OK</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>

</resources>
