<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/header"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#16236A"
    android:orientation="vertical"
    android:padding="20dp">

    <ImageView
        android:id="@+id/header_logo"
        android:layout_width="90dp"
        android:layout_height="75dp"
        android:contentDescription="@string/header_logo"
        app:srcCompat="@drawable/logo" />

    <TextView
        android:id="@+id/header_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/header_name"
        android:textColor="@color/white"
        android:textSize="24sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/header_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/header_email"
        android:textColor="@color/white"
        android:textSize="18sp" />
</LinearLayout>